@@ -11,6 +11,7 @@ For a detailed view of what has changed, refer to the {uri-project}/commits/mast
 
 * add support for cover image via `+:front-cover-image:+` attribute. https://github.com/slonopotamus/asciidoctor-fb2/issues/3[#3]
 * update fb2rb to 0.3.0
+* add support for nested lists. https://github.com/slonopotamus/asciidoctor-fb2/issues/2[#2]
 
 == 0.1.0 (2020-07-24) - @slonopotamus
 
